# module-pallet

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .windsurf  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  audit_codebase.py  config.py  debug_storage.py  docker-compose.dev.yml  docker-compose.yml  fix_events.py  fix_hardcoded_values.py  flake.nix  github_actions_report.json  mypy.ini  nginx.conf  pyproject.toml  qa_complete.py  requirements.in  requirements.ini  requirements.txt  run_checks.sh  run_test_hooks.sh  rust-toolchain.toml  setup.py  substrate_config.py  substrate_pallet_client.py  test_direct_rpc_calls.py  test_hooks.py  test_real_chain_integration.py  validation_report.json  version_manager.py
.github/ISSUE_TEMPLATE/: dockerize-project.md  fix-deployment-commune-ipfs.md
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: ci.yml  integration.yml  python.yml  release.yml  rust.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  INFRASTRUCTURE_UPDATE.md  ci-cd.md  project-spec.md
docs/archive/: mcp-reference.md
env-setup/: flake.nix
mod_net_client/core/: client.py
mod_net_client/ipfs/: handler.py
mod_net_client/utils/: validation.py
modules/: speech2text  text2speech  text2video  text_gen
modules/test_module/: README.md  module.py  requirements.txt  test_integration.py
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/mcp/: Cargo.toml
pallets/mcp/src/: lib.rs
pallets/module-registry/: Cargo.toml
pallets/module-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/src/: lib.rs  mock.rs
runtime/: Cargo.toml  build.rs
runtime/src/configs/: mod.rs
scripts/: audit_codebase.py  config.py  debug_storage.py  linting_and_formatting.py  manage-services.sh  qa_complete.py  setup-external-ports.sh  substrate_config.py  substrate_pallet_client.py  test_direct_rpc_calls.py  test_hooks.py  test_real_chain_integration.py
scripts/pm2/: pm2-menu.sh  run-chain.sh  run-explorer.sh  run-ipfs-worker.sh  run-ipfs.sh
tests/: test_basic.py  test_client.py  test_ipfs.py  test_validation.py
webui/: blockchain-explorer.html
